# poo-flow

./: .bazelignore  .bazelrc  .envrc  .gitignore  .poo-flow-source-rev  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  README.org  build.ss  cli.ss  devenv.nix  gerbil.pkg  justfile  org-zhixing.toml  package.json  runtime-wasm-generator-build.ss
.agents/: asp.toml
.agents/plugins/: marketplace.json
.bin/: check-nono-c-binding
.codex/: config.toml  harness-policy.json
.codex/agents/: asp-explorer.toml
.github/workflows/: ci.yml  github-page.yml  python-runtime-wheel.yml  release.yml  runtime-wasm-package.yml  workflow-lint.yml
bindings/nono-c/: nono.h  poo_flow_nono_binding.h  poo_flow_nono_binding_probe.c
bindings/runtime-c/: BUILD.bazel  Makefile  README.org  runtime_checks.bzl  runtime_contract.bzl
bindings/runtime-c/benchmarks/: proof_case_v1_benchmark.c  runtime-v0-gerbil-ffi-benchmark.ss  runtime_v0_batch_benchmark.c
bindings/runtime-c/benchmarks/receipts/: proof_case_v1_macos_arm64.receipt  runtime_v0_batch_macos_arm64.receipt  runtime_v0_gerbil_ffi_macos_arm64.receipt
bindings/runtime-c/bundle-v1/: BUILD.bazel
bindings/runtime-c/bundle-v1/benchmarks/: bundle_v1_lookup_benchmark.c
bindings/runtime-c/bundle-v1/include/poo_flow/: bundle_v1.h
bindings/runtime-c/bundle-v1/src/: bundle_v1.c
bindings/runtime-c/bundle-v1/tests/: bundle_v1_cpp_consumer.cc  bundle_v1_harness.c  bundle_v1_scheme_image_harness.c  bundle_v1_scheme_image_test.sh
bindings/runtime-c/include/: poo_flow_runtime_abi.h
bindings/runtime-c/include/poo_flow/: proof_case_v1.h  proof_case_vector_v1.h  runtime_v0.h  runtime_v0_contract.h
bindings/runtime-c/probe/: poo_flow_runtime_abi_probe.c
bindings/runtime-c/schema/: runtime_v0_contract.json  runtime_v0_control.org
bindings/runtime-c/src/: proof_case_v1.c  runtime_v0.c  runtime_v0_internal.h
bindings/runtime-c/tests/: proof_case_v1_harness.c  proof_case_v1_installed_consumer.c  runtime_v0_batch_harness.c  runtime_v0_exported_symbols.json  runtime_v0_exported_symbols.txt  runtime_v0_harness.c  runtime_v0_installed_consumer.c  runtime_v0_symbol_surface_test.sh  runtime_v0_vector_harness.c
bindings/runtime-c/tests/vectors/: runtime_v0_contract.txt  runtime_v0_event_1.txt
bindings/runtime-c/tools/: generate-runtime-v0-contract.ss  generate_runtime_v0_contract.py
bindings/runtime-ts/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
bindings/runtime-wasm/: BUILD.bazel  README.md  exports.json  package.json
bindings/runtime-wasm/examples/: browser-contribution.ss  browser-profile-composition.ss  human-capability.ss  scenario-workflows.ss
bindings/runtime-wasm/include/poo_flow/: runtime_wasm.h  workflow_cursor.h
bindings/runtime-wasm/scripts/: bazel-runner.mjs  materialize-human-capability-bundle.mjs  publication-lock.mjs  publication-transaction.mjs
bindings/runtime-wasm/src/: index.d.ts  index.mjs  runtime_wasm_shim.c  workflow_cursor.c
bindings/runtime-wasm/test/: bazel-selection.mjs  generator-determinism.mjs  publication-lock.mjs  publication-transaction.mjs  runtime-wasm.test.mjs  scenario-workflows.test.mjs
docs/10-19-design/: 10.01-gerbil-poo-funflow-control-plane.org  10.02-funflow-alignment-audit.org  10.03-funflow-source-audit-acceleration.org  10.04-funflow-tutorial-result-ladder.org  (+2 more)
harness-policy/: gerbil.ss
schemas/: README.org
scheme/: BUILD.bazel  materialize_gerbil_projects.sh  validate_compile_receipt_v1.ss
src/: cli.ss  poo-flow.ss  projection-syntax-support.ss
src/cli-support/: build.ss  (+8 more)
t/: agent-harness-object-test.ss  agent-sandbox-bridge-test.ss  agent-sandbox-cube-interface-test.ss  agent-sandbox-descriptor-test.ss  agent-sandbox-marlin-interface-test.ss  agent-sandbox-nono-c-binding-test.ss  agent-sandbox-nono-c-language-test.ss  agent-sandbox-nono-profile-candidate-test.ss  agent-sandbox-profile-candidate-test.ss  agent-sandbox-profile-test.ss  agent-sandbox-profile-user-interface-test.ss  boundary-namespace-test.ss  build-api-adaptive-execution-window-test.ss  build-api-process-memory-guard-test.ss  build-api-project-compile-guard-test.ss  build-cache-performance-test.ss  cli-build-performance-test.ss  cli-process-test.ss  cli-support-framework-command-macro-test.ss  cli-support-package-building-test.ss  cli-support-project-building-test.ss  cli-support-tests.ss  cli-test.ss  composition-typescript-test.ss  config-test.ss  contract-tests.ss  control-plane-role-test.ss  control-plane-test.ss  declaration-case-test.ss  descriptor-registry-test.ss  docker-descriptor-test.ss  domain-case-instance-overlay-performance-test.ss  domain-case-syntax-test.ss  domain-case-test.ss  durable-policy-manifest-test.ss  durable-policy-performance-test.ss  durable-recovery-scenario-performance-test.ss  durable-recovery-scenario-test.ss  durable-runtime-manifest-test.ss  durable-runtime-store-backend-test.ss  (+176 more)
tools/: emit-proof-case-vector.ss  process_memory_guard.py  run-ac10-release-assurance.ss  run-ac11-cutover-readiness.ss  run-ac11-release-version-matrix.ss  run-agentic-qualification.ss  run-gxi-memory-guard.ss  run-native-scheme-build  run-native-scheme-env  run-native-scheme-tests  validate-runtime-v0-symbol-surface.ss
tools/bazel/: BUILD.bazel  bootstrap_gerbil_toolchain.sh  bootstrap_gerbil_toolchain_test.sh  bundle_v1.bzl  finalize_gerbil_bootstrap_state.sh  finalize_gerbil_bootstrap_state_test.sh  gerbil_environment.py  gerbil_project.bzl  gerbil_project_environment.bzl  gerbil_project_environment_tool.py  gerbil_project_environment_tool_test.py  gerbil_projection.bzl  gerbil_receipt.bzl  gerbil_repository.bzl  gerbil_toolchain.bzl  gxpkg_overlay_build.ss  host_system.bzl  install_gerbil_dependencies.sh.tpl  local_gerbil.BUILD.bazel.tpl  native_abi_fingerprint.sh  native_scheme_env.sh.tpl  native_tool.sh.tpl  overlay_gerbil_gxpkg.sh  run_scheme_project.sh  run_scheme_tests.sh  scheme_projection_artifact_tool.py  scheme_projection_artifact_tool_test.py  shared_gerbil_capability_test.sh
user-interface/: CONTRACT.org  README.org  config.ss  init.ss  modules.ss
(+890 files in other folders)
