package(default_visibility = ["//visibility:public"])

exports_files(["tools/validate-runtime-v0-symbol-surface.ss"])

filegroup(
    name = "runtime_v0_schema",
    srcs = ["src/contract/runtime-v0-abi-schema.ss"],
)

filegroup(
    name = "scheme_runtime_sources",
    srcs = glob([
        "gerbil.pkg",
        "src/**/*.ss",
    ]),
)
