package(default_visibility = ["//visibility:public"])

exports_files([
    "t/feature-system-bundle-v1-foreign-arena-fixture.ss",
    "tools/validate-runtime-v0-symbol-surface.ss",
])

filegroup(
    name = "runtime_v0_schema",
    srcs = ["src/contract/runtime-v0-abi-schema.ss"],
)

filegroup(
    name = "scheme_runtime_sources",
    srcs = glob([
        "gerbil.pkg",
        "src/**/*.inc",
        "src/**/*.scm",
        "src/**/*.ss",
        "src/**/*.ssi",
    ]),
)

filegroup(
    name = "runtime_wasm_generator_build_script",
    srcs = ["runtime-wasm-generator-build.ss"],
)

filegroup(
    name = "runtime_wasm_generator_scheme_sources",
    srcs = [
        "gerbil.pkg",
        "src/projection-syntax-support.ss",
        "src/core/failure.ss",
        "src/core/flow-declarations.ss",
        "src/core/flow-strand.ss",
        "src/core/flow.ss",
        "src/core/object-syntax.ss",
        "src/core/plan.ss",
        "src/core/projection-syntax.ss",
        "src/core/roles.ss",
        "src/core/task.ss",
        "src/feature-system/bundle-v1-foreign-arena.ss",
        "src/feature-system/bundle-v1-lowering.ss",
        "src/module-system/profile-composition-accessors.ss",
        "src/module-system/profile-composition-builders.ss",
        "src/module-system/profile-composition-inline-runtime.ss",
        "src/module-system/profile-composition-syntax-plan.ss",
        "src/module-system/profile-composition-use-syntax.ss",
        "src/module-system/profile-composition.ss",
        "src/utilities/functional.ss",
    ],
)

filegroup(
    name = "scheme_source_root_marker",
    srcs = ["gerbil.pkg"],
)

filegroup(
    name = "scheme_build_sources",
    srcs = [
        "build.ss",
        ":scheme_runtime_sources",
    ] + glob([
        "bindings/nono-c/**/*.h",
        "user-interface/**/*.ss",
    ]),
)

filegroup(
    name = "runtime_load_projection_source",
    srcs = ["src/module-system/runtime-load-projection.ss"],
)

filegroup(
    name = "scheme_test_sources",
    srcs = [":scheme_build_sources"] + glob([
        "README.org",
        "docs/**/*.org",
        "t/**",
    ]),
)
