module(
    name = "poo_flow",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "gerbil_bazel", version = "0.1.0")

GERBIL_LINUX_INSTALL_DIGEST = "ee5a236818e1b8fd9cc6e886b510795495e95402e790892961e6a1059a5c3208"

GERBIL_LINUX_SHA256 = "741d67f1d1a37e057181bfe8b3348ce2a9cfce06ac3b9c4e914400978f9d5fe7"

GERBIL_LINUX_URLS = [
    "https://github.com/tao3k/gerbil-bazel/releases/download/gerbil-v0.18.2-07c84815-linux-x86_64-ee5a236818e1b8fd9cc6e886b510795495e95402e790892961e6a1059a5c3208/gerbil-v0.18.2-07c84815-linux-x86_64-ee5a236818e1b8fd9cc6e886b510795495e95402e790892961e6a1059a5c3208.tar.gz",
]

git_override(
    module_name = "gerbil_bazel",
    commit = "7c5f595ccc4c18dba93ebffa7d5c57d233638ea4",
    remote = "https://github.com/tao3k/gerbil-bazel.git",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

git_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:git.bzl",
    "git_repository",
)

git_repository(
    name = "gerbil_poo_sources",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["build.ss", "gerbil.pkg"])
filegroup(name = "sources", srcs = glob(["**/*.ss", "gerbil.pkg"]))
""",
    commit = "1c3225637525400341a09e958296962c10184ead",
    remote = "https://github.com/mighty-gerbils/gerbil-poo.git",
)

http_archive(
    name = "gerbil_utils_sources",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["build.ss", "gerbil.pkg"])
filegroup(name = "sources", srcs = glob(["**/*.ss", "gerbil.pkg"]))
""",
    sha256 = "e7777c505e71de490dc05f8e3ff4473dddbc998a99899c085d31750add551296",
    strip_prefix = "gerbil-utils-f45a4ef3bfecd2af39e114ed736ce9082cbb8244",
    type = "tar.gz",
    urls = [
        "https://codeload.github.com/mighty-gerbils/gerbil-utils/tar.gz/f45a4ef3bfecd2af39e114ed736ce9082cbb8244",
    ],
)

git_repository(
    name = "gslph_sources",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["build.ss", "gerbil.pkg"])
filegroup(
    name = "sources",
    srcs = glob(["src/**/*.ss"]) + ["gerbil.pkg"],
)
""",
    commit = "eb64f3720f4a7fedecdc932b276c5241d727fe2a",
    remote = "https://github.com/tao3k/gerbil-scheme-language-project-harness.git",
)

gerbil = use_extension("@gerbil_bazel//gerbil:extensions.bzl", "gerbil")
gerbil.auto(
    name = "local_gerbil",
    expected_version_prefixes = [
        "Gerbil v0.18.2",
        "Gerbil 07c8481",
    ],
    linux_prebuilt_arch = "x86_64",
    linux_prebuilt_install_digest = GERBIL_LINUX_INSTALL_DIGEST,
    linux_prebuilt_sha256 = GERBIL_LINUX_SHA256,
    linux_prebuilt_urls = GERBIL_LINUX_URLS,
)
use_repo(gerbil, "local_gerbil")

register_toolchains("@local_gerbil//:registered_toolchain")
