module(
    name = "poo_flow",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "gerbil_bazel", version = "0.1.0")

GERBIL_LINUX_INSTALL_DIGEST = "ee5a236818e1b8fd9cc6e886b510795495e95402e790892961e6a1059a5c3208"

GERBIL_LINUX_SHA256 = "741d67f1d1a37e057181bfe8b3348ce2a9cfce06ac3b9c4e914400978f9d5fe7"

GERBIL_LINUX_URLS = [
    "https://github.com/tao3k/gerbil-bazel/releases/download/gerbil-v0.18.2-07c84815-linux-x86_64-ee5a236818e1b8fd9cc6e886b510795495e95402e790892961e6a1059a5c3208/gerbil-v0.18.2-07c84815-linux-x86_64-ee5a236818e1b8fd9cc6e886b510795495e95402e790892961e6a1059a5c3208.tar.gz",
]

git_override(
    module_name = "gerbil_bazel",
    commit = "66db6227f2f328c7e1d1690925aaf0f8767af2dd",
    remote = "https://github.com/tao3k/gerbil-bazel.git",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

gerbil = use_extension("@gerbil_bazel//gerbil:extensions.bzl", "gerbil")
gerbil.auto(
    name = "local_gerbil",
    expected_version_prefixes = [
        "Gerbil v0.18.2",
        "Gerbil 07c8481",
    ],
    linux_prebuilt_arch = "x86_64",
    linux_prebuilt_install_digest = GERBIL_LINUX_INSTALL_DIGEST,
    linux_prebuilt_sha256 = GERBIL_LINUX_SHA256,
    linux_prebuilt_urls = GERBIL_LINUX_URLS,
    project_root_marker = "//:gerbil.pkg",
    project_dependency_source_packages = [
        "gerbil-utils",
        "gerbil-poo",
        "gslph",
    ],
)
use_repo(
    gerbil,
    "local_gerbil",
    "gerbil_utils_sources",
    "gerbil_poo_sources",
    "gslph_sources",
)

register_toolchains("@local_gerbil//:registered_toolchain")
