load(
    "@gerbil_bazel//gerbil:defs.bzl",
    "gerbil_package_compile",
    "gerbil_project_compile",
    "gerbil_project_dev",
    "gerbil_project_test",
)
load("//tools/bazel:gerbil_projection.bzl", "gerbil_project_projection")

package(default_visibility = ["//visibility:public"])

gerbil_package_compile(
    name = "gerbil_utils_package",
    srcs = ["@gerbil_utils_sources//:sources"],
    build_script = "@gerbil_utils_sources//:build.ss",
    package = "github.com/mighty-gerbils/gerbil-utils",
    revision = "f45a4ef3bfecd2af39e114ed736ce9082cbb8244",
)

gerbil_package_compile(
    name = "gerbil_poo_package",
    srcs = ["@gerbil_poo_sources//:sources"],
    build_script = "@gerbil_poo_sources//:build.ss",
    package = "github.com/mighty-gerbils/gerbil-poo",
    revision = "1c3225637525400341a09e958296962c10184ead",
    deps = [":gerbil_utils_package"],
)

gerbil_package_compile(
    name = "gslph_package",
    srcs = ["@gslph_sources//:poo_flow_component_sources"],
    build_script = "@gslph_sources//:build.ss",
    package = "github.com/tao3k/gerbil-scheme-language-project-harness",
    revision = "49a4cac696855fb129fba321813996ba840abb98",
    deps = [":gerbil_poo_package"],
)

filegroup(
    name = "dependency_packages",
    srcs = [
        ":gerbil_poo_package",
        ":gerbil_utils_package",
        ":gslph_package",
    ],
)

gerbil_project_compile(
    name = "compile",
    srcs = ["//:scheme_build_sources"],
    args = ["compile"],
    build_script = "//:build.ss",
    receipt_line_prefix = "POO_FLOW_PROJECT_BUILD_RECEIPT ",
    deps = [
        ":gerbil_poo_package",
        ":gerbil_utils_package",
        ":gslph_package",
    ],
)

gerbil_project_dev(
    name = "dev_compile",
    args = ["compile"],
    build_script = "//:build.ss",
    tags = [
        "local",
        "manual",
    ],
    deps = [
        ":gerbil_poo_package",
        ":gerbil_utils_package",
        ":gslph_package",
    ],
)

gerbil_project_dev(
    name = "dev_unit_tests",
    args = ["compile"],
    build_script = "//:build.ss",
    tags = [
        "local",
        "manual",
    ],
    tests = ["//:t/unit-tests.ss"],
    deps = [
        ":gerbil_poo_package",
        ":gerbil_utils_package",
        ":gslph_package",
    ],
)

filegroup(
    name = "project_root",
    srcs = [":compile"],
    output_group = "project_root",
)

filegroup(
    name = "compile_log",
    srcs = [":compile"],
    output_group = "log",
)

filegroup(
    name = "compile_receipt",
    srcs = [":compile"],
    output_group = "receipt",
)

gerbil_project_projection(
    name = "wheel_smoke_projection_artifact",
    output_name = "wheel_smoke.ss.poo-flow-projection.sexp",
    project = ":compile",
    projection_source = "//:runtime_load_projection_source",
    source = "//packages/python-runtime/src/poo_flow_runtime:wheel_smoke_projection_source",
)

[
    gerbil_project_test(
        name = name,
        size = size,
        srcs = "//:scheme_test_sources",
        project = ":compile",
        source_root_marker = "//:scheme_source_root_marker",
        tags = ["exclusive"],
        tests = [test_root],
    )
    for name, size, test_root in [
        ("unit_tests", "medium", "//:t/unit-tests.ss"),
        ("contract_tests", "small", "//:t/contract-tests.ss"),
        ("cli_support_tests", "small", "//:t/cli-support-tests.ss"),
        ("integration_tests", "small", "//:t/integration-tests.ss"),
        ("performance_tests", "large", "//:t/performance-tests.ss"),
        (
            "user_interface_custom_loop_engine_capability_test",
            "large",
            "//:t/user-interface-custom-loop-engine-capability-test.ss",
        ),
    ]
]

test_suite(
    name = "tests",
    tests = [
        ":cli_support_tests",
        ":contract_tests",
        ":integration_tests",
        ":unit_tests",
        ":user_interface_custom_loop_engine_capability_test",
    ],
)

test_suite(
    name = "all_tests",
    tests = [
        ":performance_tests",
        ":tests",
    ],
)
