load(":runtime_contract.bzl", "runtime_contract")
load(":runtime_checks.bzl", "runtime_gerbil_benchmark_test", "runtime_leak_test")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

runtime_contract(
    name = "runtime_v0_contract",
    generator = "tools/generate-runtime-v0-contract.ss",
    gerbil_path = "@local_gerbil//:gerbil_path",
    gerbil_root = "@local_gerbil//:gerbil_root.marker",
    gxi = "@local_gerbil//:gxi",
    scheme_sources = "//:scheme_runtime_sources",
)

filegroup(
    name = "runtime_v0_contract_header",
    srcs = [":runtime_v0_contract"],
    output_group = "header",
)

filegroup(
    name = "runtime_v0_contract_vector",
    srcs = [":runtime_v0_contract"],
    output_group = "vector",
)

filegroup(
    name = "runtime_v0_event_vector",
    srcs = [":runtime_v0_contract"],
    output_group = "event_vector",
)

cc_library(
    name = "runtime_v0_contract_headers",
    hdrs = [":runtime_v0_contract_header"],
    strip_include_prefix = "generated/include",
)

cc_library(
    name = "runtime_v0_headers",
    hdrs = ["include/poo_flow/runtime_v0.h"],
    strip_include_prefix = "include",
    deps = [":runtime_v0_contract_headers"],
)

cc_library(
    name = "runtime_c_library",
    alwayslink = True,
    srcs = ["src/runtime_v0.c"],
    copts = [
        "-std=c11",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
    ],
    deps = [":runtime_v0_headers"],
)

cc_binary(
    name = "runtime_c_shared",
    linkshared = True,
    deps = [":runtime_c_library"],
)

cc_test(
    name = "runtime_v0_harness",
    srcs = ["tests/runtime_v0_harness.c"],
    deps = [":runtime_c_library"],
)

runtime_gerbil_benchmark_test(
    name = "runtime_v0_gerbil_ffi_benchmark",
    contract_header = ":runtime_v0_contract_header",
    gerbil_cc = "@local_gerbil//:gerbil_cc",
    gxc = "@local_gerbil//:gxc",
    gxi = "@local_gerbil//:gxi",
    header = "include/poo_flow/runtime_v0.h",
    library = ":runtime_c_shared",
    package_file = "//:gerbil.pkg",
    source = "benchmarks/runtime-v0-gerbil-ffi-benchmark.ss",
    tags = ["manual"],
)

cc_test(
    name = "runtime_v0_batch_harness",
    srcs = ["tests/runtime_v0_batch_harness.c"],
    deps = [":runtime_c_library"],
)

cc_test(
    name = "runtime_v0_vector_harness",
    srcs = ["tests/runtime_v0_vector_harness.c"],
    args = ["$(location :runtime_v0_event_vector)"],
    data = [":runtime_v0_event_vector"],
    deps = [":runtime_c_library"],
)

cc_test(
    name = "runtime_v0_installed_consumer",
    srcs = ["tests/runtime_v0_installed_consumer.c"],
    deps = [":runtime_c_library"],
)

cc_test(
    name = "runtime_v0_harness_ubsan",
    srcs = [
        "src/runtime_v0.c",
        "tests/runtime_v0_harness.c",
    ],
    copts = [
        "-fno-omit-frame-pointer",
        "-fsanitize=undefined",
    ],
    linkopts = ["-fsanitize=undefined"],
    deps = [":runtime_v0_headers"],
)

cc_test(
    name = "runtime_v0_batch_harness_ubsan",
    srcs = [
        "src/runtime_v0.c",
        "tests/runtime_v0_batch_harness.c",
    ],
    copts = [
        "-fno-omit-frame-pointer",
        "-fsanitize=undefined",
    ],
    linkopts = ["-fsanitize=undefined"],
    deps = [":runtime_v0_headers"],
)

cc_test(
    name = "runtime_v0_harness_asan",
    srcs = [
        "src/runtime_v0.c",
        "tests/runtime_v0_harness.c",
    ],
    copts = [
        "-fno-omit-frame-pointer",
        "-fsanitize=address",
    ],
    linkopts = ["-fsanitize=address"],
    deps = [":runtime_v0_headers"],
)

cc_test(
    name = "runtime_v0_batch_harness_asan",
    srcs = [
        "src/runtime_v0.c",
        "tests/runtime_v0_batch_harness.c",
    ],
    copts = [
        "-fno-omit-frame-pointer",
        "-fsanitize=address",
    ],
    linkopts = ["-fsanitize=address"],
    deps = [":runtime_v0_headers"],
)

test_suite(
    name = "runtime_c_sanitizer_tests",
    tests = [
        ":runtime_v0_batch_harness_asan",
        ":runtime_v0_batch_harness_ubsan",
        ":runtime_v0_harness_asan",
        ":runtime_v0_harness_ubsan",
    ],
)

runtime_leak_test(
    name = "runtime_c_leak_test",
    binaries = [
        ":runtime_v0_batch_harness",
        ":runtime_v0_harness",
    ],
    tags = ["manual"],
)

cc_binary(
    name = "runtime_v0_batch_benchmark",
    srcs = ["benchmarks/runtime_v0_batch_benchmark.c"],
    copts = ["-O3"],
    deps = [":runtime_c_library"],
)

cc_test(
    name = "runtime_v0_batch_benchmark_smoke",
    srcs = ["benchmarks/runtime_v0_batch_benchmark.c"],
    args = ["20"],
    copts = ["-O3"],
    deps = [":runtime_c_library"],
)

test_suite(
    name = "runtime_c_tests",
    tests = [
        ":runtime_v0_batch_harness",
        ":runtime_v0_harness",
        ":runtime_v0_installed_consumer",
        ":runtime_v0_vector_harness",
    ],
)
