load("//tools/bazel:bundle_v1.bzl", "poo_flow_bundle_v1")

package(default_visibility = ["//visibility:public"])

poo_flow_bundle_v1(
    name = "human_capability_bundle",
    src = "examples/human-capability.ss",
    arena_out = "human-capability.arena.bin",
    bundle_epoch = 1,
    bundle_id = "human-capability",
    descriptor_out = "human-capability.descriptor.bin",
)
