load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "gerbil_projection.bzl",
])

sh_test(
    name = "shared_gerbil_capability_test",
    srcs = ["shared_gerbil_capability_test.sh"],
    args = [
        "$(rlocationpath @local_gerbil//:toolchain.receipt.json)",
    ],
    data = [
        "@local_gerbil//:toolchain.receipt.json",
    ],
)

py_binary(
    name = "scheme_projection_artifact_tool",
    srcs = ["scheme_projection_artifact_tool.py"],
    main = "scheme_projection_artifact_tool.py",
    python_version = "3.12",
    deps = ["//packages/python-runtime/src/poo_flow_runtime:scheme_datum_tool"],
)

py_test(
    name = "scheme_projection_artifact_tool_test",
    srcs = [
        "scheme_projection_artifact_tool.py",
        "scheme_projection_artifact_tool_test.py",
    ],
    main = "scheme_projection_artifact_tool_test.py",
    python_version = "3.12",
    deps = ["//packages/python-runtime/src/poo_flow_runtime:scheme_datum_tool"],
)
